AH-2004-03-11-0: Enhancem.: Allow inst_berkeley.sh to continue even without 
                            test regarding local file system for berkley db
                            directory.
                 Review:    MD
   
EB-2004-03-11-0: Bugfix:    removing a suspend threshold doesn't unsuspend jobs
                 Issue:     831
                 Changed:   sge_qmaster
                 Review:    SG

AS-2004-03-10-0: CVS        Created V60_beta1_target_{BRANCH,TAG}
-----------------------------------------------------------------

AH-2004-03-10-0: Enhancem.: Use more intuitive defaults for weight_ticket,
                            weight_urgency and weight_priority. Lower impact
                            of waiting time in urgency formula.
   
EB-2004-03-10-2: Bugfix:    calendar handling is broken
                 Issue:     825
                 Changed:   sge_qmaster
                 Review:    AH 

MD-2004-03-10-0: Bugfix:    really bad typo
                 Issue:     793
                 Changed:   inst_sge

JG-2004-03-10-2: Testsuite: Some fixes for the testsuite queue handling and
                            tests bugs/issuezilla/193 and
                            functional/migration.

JG-2004-03-10-1: Enhancem.: Added datastructures for the reporting of long 
                            running jobs.
                            Added an optimization for JG-2004-03-10-0.
                 Changed:   all

EB-2004-03-10-1: Bugfix:    Unsuspend on subordinate is broken
                 Issue:     807
                 Changed:   sge_qmaster
                 Review:    AH 

SG-2004-03-10-1: Bugfix:    the japi event client does get qmaster goes down
                            events and client shut down events. Part of 788
                 Changed:   qmaster

SG-2004-03-10-0: Bugfix:    scheduler crashed during functional ticket 
                            computation on AMD64 - linux
                 Changed:   scheduler