@@ -2980,91 +2980,6 @@ int cl_com_gethostname(char **unique_hostname,struct in_addr *copy_addr,struct h
 
 
 
-#if 0
-#ifdef __CL_FUNCTION__
-#undef __CL_FUNCTION__
-#endif
-#define __CL_FUNCTION__ "cl_com_gethostbyname()"
-static int cl_com_gethostbyname(char *host, cl_com_hostent_t **hostent ) {
-
-   int he_error = 0;
-   struct hostent *he = NULL; 
-   int tmp_buffer_length = CL_MAXHOSTNAMELEN_LENGTH * 2; 
-   cl_com_hostent_t *hostent_p = NULL;   
-
-   /* check parameters */
-   if (hostent == NULL || host == NULL) {
-      CL_LOG( CL_LOG_ERROR, cl_get_error_text(CL_RETVAL_PARAMS));
-      return CL_RETVAL_PARAMS;    /* we don't accept NULL pointers */
-   }
-   if (*hostent != NULL) {
-      CL_LOG( CL_LOG_ERROR, cl_get_error_text(CL_RETVAL_PARAMS));
-      return CL_RETVAL_PARAMS;    /* we expect an pointer address, set to NULL */
-   }
-
-   hostent_p = (cl_com_hostent_t*)malloc(sizeof(cl_com_hostent_t));
-   if (hostent_p == NULL) {
-      CL_LOG(CL_LOG_ERROR, cl_get_error_text(CL_RETVAL_MALLOC));
-      return CL_RETVAL_MALLOC;          /* could not get memory */ 
-   }
-   /* get memory for struct member variables */
-   hostent_p->he = (struct hostent*) malloc(sizeof(struct hostent));
-   if (hostent_p->he == NULL) {
-      cl_com_free_hostent(&hostent_p);   /* could not get memory */ 
-      CL_LOG(CL_LOG_ERROR, cl_get_error_text(CL_RETVAL_MALLOC));
-      return CL_RETVAL_MALLOC;
-   }
-
-   /* clear memory of the hostent struct */
-   memset(hostent_p->he,0,sizeof(struct hostent)); 
-
-   while(1) {
-      hostent_p->he_data_buffer = (char*) malloc ( tmp_buffer_length * sizeof(char));
-      if (hostent_p->he_data_buffer == NULL) {
-         cl_com_free_hostent(&hostent_p);  /* could not get memory */
-         CL_LOG(CL_LOG_ERROR, cl_get_error_text(CL_RETVAL_MALLOC));
-         return CL_RETVAL_MALLOC;
-      }
-
-      errno = 0;
-#ifndef LINUX 
-      he = gethostbyname_r(host, hostent_p->he, hostent_p->he_data_buffer, (tmp_buffer_length * sizeof(char)), &he_error); 
-#else
-      gethostbyname_r(host, hostent_p->he, hostent_p->he_data_buffer, tmp_buffer_length * sizeof(char), &he, &he_error); 
-#endif
-      if (errno == ERANGE) {
-         /* The data buffer is to small for all host information data. 
-            We have to malloc more memory for this host */
-         free(hostent_p->he_data_buffer);
-         hostent_p->he_data_buffer = NULL;
-         tmp_buffer_length = tmp_buffer_length * 2;  /* try it with double memory size */
-         CL_LOG_INT( CL_LOG_INFO, "too small data buffer, retry with ", tmp_buffer_length );
-         if (tmp_buffer_length > 256*256 ) {
-            CL_LOG_INT( CL_LOG_ERROR, "stopping with data buffer size ", tmp_buffer_length );
-            break;
-         } else {
-            continue;
-         }
-      }
-      break;
-   }
-
-   if (he == NULL) {
-      CL_LOG( CL_LOG_ERROR, cl_get_error_text(CL_RETVAL_UNKOWN_HOST_ERROR));
-      cl_com_free_hostent(&hostent_p);       /* could not find host */
-      return CL_RETVAL_UNKOWN_HOST_ERROR;
-   }
-
-   if (hostent_p->he->h_addr == NULL) {
-      cl_com_free_hostent(&hostent_p);
-      return CL_RETVAL_IP_NOT_RESOLVED_ERROR;
-   }
-
-   *hostent = hostent_p;
-   cl_com_print_host_info(hostent_p);
-   return CL_RETVAL_OK;
-}
-#endif
 #ifdef __CL_FUNCTION__
 #undef __CL_FUNCTION__
 #endif
@@ -3114,96 +3029,6 @@ static int cl_com_gethostbyname(char *host, cl_com_hostent_t **hostent, int* sys
 }
 
 
-#if 0
-#ifdef __CL_FUNCTION__
-#undef __CL_FUNCTION__
-#endif
-#define __CL_FUNCTION__ "cl_com_gethostbyaddr()"
-static int cl_com_gethostbyaddr(struct in_addr *addr, cl_com_hostent_t **hostent ) {
-
-
-   int he_error = 0;
-   struct hostent *he = NULL; 
-   int tmp_buffer_length = CL_MAXHOSTNAMELEN_LENGTH * 2; 
-
-   cl_com_hostent_t *hostent_p = NULL;   
-
-
-   /* check parameters */
-   if (hostent == NULL || addr == NULL) {
-      CL_LOG( CL_LOG_ERROR, cl_get_error_text(CL_RETVAL_PARAMS));
-      return CL_RETVAL_PARAMS;    /* we don't accept NULL pointers */
-   }
-   if (*hostent != NULL) {
-      CL_LOG( CL_LOG_ERROR, cl_get_error_text(CL_RETVAL_PARAMS));
-      return CL_RETVAL_PARAMS;    /* we expect an pointer address, set to NULL */
-   }
-
-   hostent_p = (cl_com_hostent_t*)malloc(sizeof(cl_com_hostent_t));
-   if (hostent_p == NULL) {
-      CL_LOG(CL_LOG_ERROR, cl_get_error_text(CL_RETVAL_MALLOC));
-      return CL_RETVAL_MALLOC;          /* could not get memory */ 
-   }
- 
-   /* get memory for struct member variables */
-   hostent_p->he = (struct hostent*) malloc(sizeof(struct hostent));
-   if (hostent_p->he == NULL) {
-      cl_com_free_hostent(&hostent_p);   /* could not get memory */ 
-      CL_LOG(CL_LOG_ERROR, cl_get_error_text(CL_RETVAL_MALLOC));
-      return CL_RETVAL_MALLOC;
-   }
-
-   /* clear memory of the hostent struct */
-   memset(hostent_p->he,0,sizeof(struct hostent)); 
-
-   while(1) {
-      hostent_p->he_data_buffer = (char*) malloc ( tmp_buffer_length * sizeof(char));
-      if (hostent_p->he_data_buffer == NULL) {
-         cl_com_free_hostent(&hostent_p);  /* could not get memory */
-         CL_LOG(CL_LOG_ERROR, cl_get_error_text(CL_RETVAL_MALLOC));
-         return CL_RETVAL_MALLOC;
-      }
-
-      errno = 0;
-#ifndef LINUX 
-      
-      he = gethostbyaddr_r((const char *)addr, sizeof(struct in_addr), AF_INET, hostent_p->he, hostent_p->he_data_buffer, tmp_buffer_length * sizeof(char), &he_error); 
-#else
-      gethostbyaddr_r((const char *)addr, sizeof(struct in_addr), AF_INET, hostent_p->he, hostent_p->he_data_buffer, tmp_buffer_length * sizeof(char), &he, &he_error);
-#endif
-      if (errno == ERANGE) {
-         /* The data buffer is to small for all host information data. 
-            We have to malloc more memory for this host */
-         free(hostent_p->he_data_buffer);
-         hostent_p->he_data_buffer = NULL;
-         tmp_buffer_length = tmp_buffer_length * 2;  /* try it with double memory size */
-         CL_LOG_INT( CL_LOG_INFO, "too small data buffer, retry with ", tmp_buffer_length );
-         if (tmp_buffer_length > 256*256 ) {
-            CL_LOG_INT( CL_LOG_ERROR, "stopping with data buffer size ", tmp_buffer_length );
-            break;
-         } else {
-            continue;
-         }
-      }
-      break;
-   }
-
-   if (he == NULL) {
-      CL_LOG( CL_LOG_ERROR, cl_get_error_text(CL_RETVAL_UNKOWN_HOST_ERROR));
-      cl_com_free_hostent(&hostent_p);       /* could not find host */
-      return CL_RETVAL_UNKOWN_HOST_ERROR;
-   }
-   
-   if (hostent_p->he->h_addr == NULL) {
-      cl_com_free_hostent(&hostent_p);
-      return CL_RETVAL_IP_NOT_RESOLVED_ERROR;
-   }
-
-   *hostent = hostent_p;
-   cl_com_print_host_info(hostent_p);
-   return CL_RETVAL_OK;
-}
-#endif
 
 #ifdef __CL_FUNCTION__
 #undef __CL_FUNCTION__
